BorrowLenses_PartialSandbox/src/objects/Business_Account_Domain__c.object
<CustomObject>
    <description>List of all Email Domains to be targeted for Business Accounts and future Sales &amp; Marketing efforts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Account Domains</relationshipLabel>
        <relationshipName>Business_Account_Domains</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Convert_Person_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <label>Converted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Account Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BAD-{00000}</displayFormat>
        <label>Business Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Account Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>